# insect-classification

./: .gitignore  main.py  pyproject.toml
configs/: baseline_config.json  hierarchical_config.json
csvs/: classes_clean.csv  manualy_taxonomy.csv  metadata.csv  pest_names.csv  taxonomy.csv
datasets/: ip102_dataset.py  ip102_hier_dataset.py
lib/Euclidean/blocks/: resnet_blocks.py  transformer_blocks.py
lib/geoopt/layers/: stereographic.py
lib/geoopt/manifolds/: euclidean.py  product.py  scaled.py
lib/geoopt/optim/: __init__.py  radam.py  radam_old.py  radamw.py  radamw_base.py  radamw_old.py  rsgd.py  rsgd_old.py  rsgd_orig.py  utils.py
lib/geoopt/samplers/: __init__.py  base.py  rhmc.py  rsgld.py  sgrhmc.py
lib/lorentz/: manifold.py  manifold_old.py
lib/lorentz/blocks/: dilated_resnet_blocks.py  layer_blocks.py  resnet_blocks.py  transformer_blocks.py
lib/lorentz/distributions/: wrapped_normal.py
lib/lorentz/layers/: BN_betas.py  Kernels.py  LBnorm.py  LConv.py  (+6 more)
lib/models/: GNN.py  ViT.py  component_list.py  decoders.py  dilated_resnet.py  hyperbolic_jacket.py  resnet.py  simple_jacket.py
lib/poincare/: manifold.py
lib/utils/: autoaug.py  imagenet.py  losses.py  mix.py  random_erasing.py  scheduler.py  transforms.py  utils.py
scripts/: build_class_table.py  build_hierarchical_metadata.py  build_taxonomy.py  evaluate_baseline.py  evaluate_hierarchical.py  export_pest_names.py  insect_ip102.py  missing_image_check.py  simple_visualization.py  train_baseline.py  train_hierbaseline.py
utils/: experiment_utils.py  plot_utils.py  train_utils.py
(+25 files in other folders)
