[project]
name = "insect-classification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "albumentations>=2.0.8",
    "geoopt>=0.5.1",
    "matplotlib>=3.10.8",
    "numpy>=2.4.0",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.3",
    "pillow>=12.0.0",
    "pre-commit>=4.5.1",
    "scikit-learn>=1.8.0",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "notebook>=7.5.1",
    "pre-commit>=4.5.1",
]
